plugins {
    java
    id("org.springframework.boot") version "3.5.7"
    id("io.spring.dependency-management") version "1.1.7"
}

group = "com.example"
version = "0.0.1-SNAPSHOT"
description = "editor"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation(project(":shared"))

    implementation("org.springframework.boot:spring-boot-starter-cache")
    implementation("org.springframework.boot:spring-boot-starter-data-redis")
    implementation("org.springframework.boot:spring-boot-starter-security")
    testImplementation("org.springframework.security:spring-security-test")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")

    // Spring Boot
    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("org.mockito:mockito-core")
    testImplementation("org.testcontainers:junit-jupiter")
    testImplementation("org.testcontainers:testcontainers")
    testImplementation("org.testcontainers:postgresql")


    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-validation")
//    implementation("org.springframework.boot:spring-boot-starter")

    // Lombok
    implementation("org.projectlombok:lombok")
    annotationProcessor("org.projectlombok:lombok")
    implementation("org.mapstruct:mapstruct:1.6.3")
    annotationProcessor("org.mapstruct:mapstruct-processor:1.6.3")
    // Database + Hibernate
    runtimeOnly("org.postgresql:postgresql")
//    implementation("org.hibernate.orm:hibernate-core:7.1.7.Final")
    implementation("org.postgresql:postgresql:42.7.8")

    implementation("io.jsonwebtoken:jjwt-api:0.11.5")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")

    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14")
    implementation("org.springframework.boot:spring-boot-starter-websocket")

    // Source: https://mvnrepository.com/artifact/com.vladmihalcea/hibernate-types-60
    implementation("com.vladmihalcea:hibernate-types-60:2.21.1")
}
tasks.withType<Test> {
    useJUnitPlatform()
    // Docker Desktop на этой машине слушает testcontainers-совместимый API на
    // dockerDesktopLinuxEngine, а не на дефолтном docker_engine — без этого
    // NpipeSocketClientProviderStrategy падает на BadRequestException. См. auth/build.gradle.kts.
    // Второй кусок той же проблемы — версия API, см. src/test/resources/docker-java.properties.
    environment("DOCKER_HOST", "npipe:////./pipe/dockerDesktopLinuxEngine")
    environment("TESTCONTAINERS_RYUK_DISABLED", "true")
}

// Отключаем «плоский» jar: сервис деплоится как исполняемый bootJar и как
// библиотека никуда не подключается. Заодно в build/libs остаётся один jar,
// поэтому COPY build/libs/*.jar в Dockerfile не ломается.
tasks.named("jar") {
    enabled = false
}
